src/test/deca/context/invalid/unknown_type.deca

//Description:
//      déclaration avec un type inconnu

//Résultat:
//      erreur contextuelle

{
    foo x;
}